Fix layout issue with titles

--- a/themes/wedding/static/css/site.css
+++ b/themes/wedding/static/css/site.css
@@ -128,6 +128,8 @@ h1#title:before {
     background-size: contain;
     background-repeat: no-repeat;
     vertical-align: middle;
+    position: relative;
+    z-index: -1;
 }
 
 h1#title:after {
@@ -141,4 +143,6 @@ h1#title:after {
     background-size: contain;
     background-repeat: no-repeat;
     vertical-align: middle;
+    position: relative;
+    z-index: -1;
 }
